# python-sandbox-executor

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.exec  README.md  docker-compose.yml  main.py  pyproject.toml  worker.py
.github/workflows/: ci.yml
examples/: client.html  main.py
job_runner/: __init__.py  api.py  config.py  job_store.py  log_store.py  memory_store.py  models.py  mpl_config.py  protocols.py  redis_client.py  runner.py  settings.py  static_utils.py  storage.py
static/: index.html
tests/: conftest.py  test_jobs.py
