[project]
name = "job-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.32.1",
    "httpx>=0.28.1",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
