[project]
name = "python-code-runner"
version = "0.1.0"
description = "Simple Python code execution server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web server
    "fastapi>=0.121.3",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
    # Data processing
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.2.0",
    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.24.0",
    # Geographic / GIS
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "geopy>=2.4.0",
    # Scientific computing
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    # Date/time
    "python-dateutil>=2.9.0",
    # HTTP requests
    "requests>=2.32.0",
    "httpx>=0.28.0",
    # JSON/YAML
    "pyyaml>=6.0.0",
    # Image processing
    "pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.14.6",
]
